--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "moment": "^2.29.4",
+    "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-date-picker": "^9.0.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
