--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -18,6 +20,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
